<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="de.hochschule_trier.customviews.MainActivity">
    <de.hochschule_trier.customviewmodule.MasterToggleButton
        android:id="@+id/all_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/master_btn_text"
        android:textOn="@string/master_btn_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <ToggleButton
            android:id="@+id/center_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/center_btn_text"
            android:textOn="@string/center_btn_text"/>
        <ToggleButton
            android:id="@+id/subwoofer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/suubwoofer_btn_text"
            android:textOn="@string/suubwoofer_btn_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hochschule_trier.customviewmodule.MasterToggleButton
            android:id="@+id/front_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/front_btn_text"
            android:textOn="@string/front_btn_text"/>
        <de.hochschule_trier.customviewmodule.MasterToggleButton
            android:id="@+id/rear_btn"
            app:disableSlaves="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/rear_btn_text"
            android:textOn="@string/rear_btn_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hochschule_trier.customviewmodule.MasterToggleButton
            android:id="@+id/left_front_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/left_btn_text"
            android:textOn="@string/left_btn_text"/>
        <de.hochschule_trier.customviewmodule.MasterToggleButton
            android:id="@+id/right_front_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/right_btn_text"
            android:textOn="@string/right_btn_text"/>
        <de.hochschule_trier.customviewmodule.MasterToggleButton
            android:id="@+id/left_rear_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/left_btn_text"
            android:textOn="@string/left_btn_text"/>
        <de.hochschule_trier.customviewmodule.MasterToggleButton
            android:id="@+id/right_rear_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/right_btn_text"
            android:textOn="@string/right_btn_text"/>
    </LinearLayout>
</LinearLayout>
